# cs128Hproject

./: .gitignore  README.md  RUN.md
coffee_chat/: Cargo.toml  config.toml  email_template.txt
coffee_chat/src/: app.rs  config.rs  main.rs
coffee_chat/src/calendar/: free_busy.rs  mod.rs
coffee_chat/src/email_sender/: mod.rs  template.rs
