[package]
name = "coffee-chat" # Or your actual package name
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true # Reduce binary size

[dependencies]
# Email dependencies
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls"] } # Or tokio1-rustls-tls
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
config = { version = "0.15.11", features = ["toml"] }
secrecy = { version = "0.10", features = ["serde"] }
tera = "1" # For templating
dotenvy = "0.15" # Optional: To load .env files for local development convenience

# Gui dependencies
eframe = { version = "0.31.1", features = ["wayland"]}
egui = "0.31.1"
env_logger = "0.11"

# Calendar dependencies
google-calendar3 = "6.0"
yup-oauth2       = { version = "11", features = ["hyper-rustls"] }
open = "5"
webbrowser = "1.0.4"
hyper-rustls     = "0.27"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
hyper-util       = { version = "0.1", features = ["client", "client-legacy", "http1"] }
hyper = { version = "1", features = ["full"] }
log = "0.4"
http-body-util = "0.1"